// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportSceneToR3fJsx > matches snapshot for default fixture 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber — paste inside <Canvas> */
<>
    {/* default-root · Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* default-cube-1 · Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for gallery kit 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber — paste inside <Canvas> */
<>
    {/* gallery-root · Gallery */}
    <group name="Gallery" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* gallery-hall · Hall */}
      <group name="Hall" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* gallery-frame-0-0 · Frame 1-1 */}
        <group name="Frame 1-1" position={[-1.1, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-1 · Frame 1-2 */}
        <group name="Frame 1-2" position={[0, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-2 · Frame 1-3 */}
        <group name="Frame 1-3" position={[1.1, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-0 · Frame 2-1 */}
        <group name="Frame 2-1" position={[-1.1, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-1 · Frame 2-2 */}
        <group name="Frame 2-2" position={[0, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-2 · Frame 2-3 */}
        <group name="Frame 2-3" position={[1.1, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-0 · Frame 3-1 */}
        <group name="Frame 3-1" position={[-1.1, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-1 · Frame 3-2 */}
        <group name="Frame 3-2" position={[0, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-2 · Frame 3-3 */}
        <group name="Frame 3-3" position={[1.1, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for scene light nodes 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber — paste inside <Canvas> */
<>
    {/* r3f-light-root · Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* sky · Sky fill */}
      <group name="Sky fill" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <ambientLight intensity={0.32} />
      </group>
      {/* sun · Sun */}
      <group name="Sun" position={[4, 10, 6]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <directionalLight intensity={1.05} castShadow />
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for showroom (nested branches) 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber — paste inside <Canvas> */
<>
    {/* showroom-root · Showroom */}
    <group name="Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* showroom-floor · Floor */}
      <group name="Floor" position={[0, 0.05, 0]} rotation={[0, 0, 0]} scale={[7, 0.1, 5]}>
        {/* showroom-pedestal-west · Pedestal West */}
        <group name="Pedestal West" position={[-2, 0.35, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* showroom-pedestal-east · Pedestal East */}
        <group name="Pedestal East" position={[2, 0.35, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
      </group>
      {/* showroom-accent · Accent */}
      <group name="Accent" position={[0, 1.1, 0]} rotation={[0, 0.35, 0]} scale={[1.2, 1.2, 1.2]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;
